fix landing image align

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,6 +1,6 @@
 .jumbotron.header {
     background-image: linear-gradient( rgba(123,123,123, 0.4), rgba(0,0,0, 0.7) ), url(https://static.trueachievements.com/customimages/016732.jpg);
-    background-position: center top;
+    background-position: center left;
     height: 300px;
     color: #fff;
     text-align: left;
